<resources>
    <string name="app_name">Aula03</string>
    <string name="button">Button</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="ir">Ir</string>
    <string name="tel">Tel</string>
    <string name="ola">Olá</string>
    <string name="seu_telefone">Seu Telefone é</string>
    <string name="seu_email">e seu E-mail é:</string>
    <string name="preferencia">Você escolheu a seguinte preferência de contato</string>
    <string name="bem_vindo">Bem-vindo</string>
</resources>